--- a/Pages/About.xaml
+++ b/Pages/About.xaml
@@ -7,8 +7,7 @@
       xmlns:local="clr-namespace:copy_flyouts"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="General"
-      d:DataContext="{d:DesignInstance local:Settings}">
+      Title="General">
 
     <Grid Margin="30" VerticalAlignment="Top">
         <Grid.RowDefinitions>
