--- a/Windows/Flyout.xaml
+++ b/Windows/Flyout.xaml
@@ -33,16 +33,16 @@
             </EventTrigger>
         </Grid.Triggers>
 
-        <!-- Notification area -->
+        <!-- Flyout area -->
         <Border BorderThickness="1" CornerRadius="5" Padding="10" BorderBrush="{DynamicResource border}" Background="{DynamicResource colorNeutralBackground1}" Opacity="{Binding FlyoutOpacity}">
             <Grid x:Name="grid">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
-                    <RowDefinition MaxHeight="120"/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
