--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -6,7 +6,7 @@
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
       xmlns:local="clr-namespace:copy_flyouts"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignWidth="1200"
       Title="General">
 
     <Grid Margin="30" VerticalAlignment="Top">
