--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow
+﻿<ui:FluentWindow xmlns:tray="http://schemas.lepo.co/wpfui/2022/xaml/tray" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -45,5 +45,23 @@
                 <ui:NavigationViewItem Content="About" Icon="{ui:SymbolIcon Info24}" TargetPageType="{x:Type pages:About}"/>
             </ui:NavigationView.FooterMenuItems>
         </ui:NavigationView>
+
+        <tray:NotifyIcon 
+            x:Name="notifyIcon"
+            Icon="/assets/icons/ic_fluent_clipboard_checkmark_16_filled.ico"
+            TooltipText="{StaticResource ProgramName}"
+            Visibility="Visible"
+            FocusOnLeftClick="False"
+            MenuOnRightClick="True"
+            LeftClick="notifyIcon_LeftClick">
+            <tray:NotifyIcon.Menu>
+                <ContextMenu>
+                    <ui:MenuItem Header="Disable" Icon="{ui:SymbolIcon Play24}" x:Name="ProgramStateMenuItem" Click="ProgramStateMenuItem_Click"/>
+                    <ui:MenuItem Header="Settings" Icon="{ui:SymbolIcon Settings24}" x:Name="SettingsMenuItem" Click="SettingsMenuItem_Click"/>
+                    <ui:MenuItem Header="Exit" Icon="{ui:SymbolIcon Power24}" x:Name="ExitMenuItem" Click="ExitMenuItem_Click"/>
+                </ContextMenu>
+            </tray:NotifyIcon.Menu>
+            
+        </tray:NotifyIcon>
     </Grid>
 </ui:FluentWindow>
