--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -20,7 +20,8 @@
     ExtendsContentIntoTitleBar="True"
     WindowBackdropType="Mica"
     WindowStartupLocation="CenterScreen"
-    WindowCornerPreference="Round">
+    WindowCornerPreference="Round"
+    Icon="/assets/icons/logo.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -32,7 +33,7 @@
             Grid.Row="0"
             CloseWindowByDoubleClickOnIcon="True">
             <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="/assets/icons/ic_fluent_clipboard_checkmark_16_filled.ico" />
+                <ui:ImageIcon Source="/assets/icons/logo.ico" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
 
@@ -48,7 +49,7 @@
 
         <tray:NotifyIcon 
             x:Name="notifyIcon"
-            Icon="/assets/icons/ic_fluent_clipboard_checkmark_16_filled.ico"
+            Icon="/assets/icons/logo-slim.ico"
             TooltipText="{StaticResource ProgramName}"
             Visibility="Visible"
             FocusOnLeftClick="False"
