--- a/Resources/CommonResources.xaml
+++ b/Resources/CommonResources.xaml
@@ -3,6 +3,7 @@
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <sys:String x:Key="ProgramName">CopyFlyouts</sys:String>
+    <sys:String x:Key="Version">v0.2.0</sys:String>
 
     <!-- notifyicon popup styling -->
     <Style x:Key="PopupItemStyle" TargetType="StackPanel">
