--- a/Resources/CommonResources.xaml
+++ b/Resources/CommonResources.xaml
@@ -3,28 +3,8 @@
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <sys:String x:Key="ProgramName">CopyFlyouts</sys:String>
-    <sys:String x:Key="Version">v0.2.0</sys:String>
+    <sys:String x:Key="Version">v0.0.1</sys:String>
 
-    <!-- notifyicon popup styling -->
-    <Style x:Key="PopupItemStyle" TargetType="StackPanel">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Orientation" Value="Horizontal"/>
-        <Setter Property="Margin" Value="0 0 0 3"/>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{DynamicResource colorNeutralBackground1Hover}"/>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-
-    <Style x:Key="PopupTextStyle" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{DynamicResource colorNeutralForeground1}"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Padding" Value="0 7 10 7"/>
-        <Setter Property="Width" Value="100"/>
-    </Style>
+    <SolidColorBrush x:Key="AttentionForegroundColor" Color="#bc2f32"/>
 
 </ResourceDictionary>
