--- a/Resources/Light.xaml
+++ b/Resources/Light.xaml
@@ -8,6 +8,8 @@
     <SolidColorBrush x:Key="colorNeutralForeground1" Color="#242424"/>
     <SolidColorBrush x:Key="colorNeutralForeground2" Color="#424242"/>
 
+    <SolidColorBrush x:Key="AttentionForegroundColor" Color="#b10e1c"/>
+
     <SolidColorBrush x:Key="border" Color="#19000000"/>
 
 </ResourceDictionary>
